--- a/云原生王四条.md
+++ b/云原生王四条.md
@@ -1,5 +1,85 @@
+# 云原生王四条
+## 简述
+云原生王四条的缘起是：2021年11月30日在云计算微信群里讨论时，我提出如下观点
+```
 基本上这四样做完，业务大致就接近一个云原生的最佳实践状态了:
 1. 用对象存储静态文件
 2. 用role不能用ak sk
 3. 尽量用托管服务
 4. 数据不要存在服务器上
+```
+群友的观点是这个“刚刚入门”，后续多次提了几次，在此细化一下，进行分条阐述，并且结合一下[12-Factor](https://12factor.net/zh_cn/)的理念丰富一下细节。
+## 1. 用对象存储静态文件
+### 1.1 概念
+#### 对象存储 Object Storage
+- https://aws.amazon.com/cn/s3/
+#### 静态文件 Static Files
+
+### 1.2 作用
+
+### 1.3 实操
+- 鼓励研发使用对象存储
+    - 积极教导研发使用awscli s3
+    - 积极配合研发设置EC2 Role方便操作s3
+    - 教导研发使用s3的sdk
+- 控制所有有空间限制的服务的空间规模，比如EBS
+    - EC2不提供大于100G的EBS
+    - k8s里的pod不提供大于8G的EBS
+    - 超标请求需要审核
+- 审核可以通过如下方式把控：
+    - 运维完全把控资源创建；运维把控
+    - IaC创建资源：审核代码
+    - 研发自主创建软控制：设定config监控
+    - 研发自主创建强控制：IAM Policy里设置Condition，NumericLessThan
+## 2. 用role不能用ak sk
+### 2.1 概念
+#### 角色 Role
+- https://aws.amazon.com/cn/iam/features/manage-roles/
+#### ak sk Access Key/Secret key
+- https://docs.aws.amazon.com/zh_cn/IAM/latest/UserGuide/id_credentials_access-keys.html
+- 访问密钥 Access Key
+- 秘密访问密钥 Secret key
+### 2.2 作用
+
+### 2.3 实操
+- 把控IAM 分配权限
+    - 普通用户剥夺创建ak sk的权限
+- 审核所有ak sk的需求。
+    - 只批准跨云的需求
+    - 不要把ak sk直接提供给研发团队以防研发硬编码到代码里
+    - 而是提供接口或者在环境变量里提供
+## 3. 尽量用托管服务
+### 3.1 概念
+#### 托管服务 managed services
+- https://aws.amazon.com/cn/managed-services/
+### 3.2 作用
+
+### 3.3 实操
+主要是鼓励为主
+- 给研发一定的托管服务权限
+- 给研发提case的权限以应对托管服务的问题
+- 让TAM服务研发
+## 4. 数据不要存在服务器上
+### 4.1 概念
+#### 此处数据的意思
+- 除代码生成物之外的所有数据，包括
+    - 日志
+    - 配置文件，密钥
+    - 证书
+    - 业务数据，等应该存在数据库或者s3里的
+    - 中间数据，等应该存在消息队列里的
+    - 不在代码库管理的脚本,crontab等配置
+
+#### 此处服务器的意思
+### 4.2 作用
+
+### 4.3 实操
+- 日志存S3或者打入到ELK等外部服务中
+- 配置文件和密钥应该通过外部或者环境获取
+    - 外部就是类似Parameter Store或者其他配置中心
+    - 环境可以通过ec2启动时的用户数据，或者pod启动时环境变量来注入具体的环境变量
+- https证书应该用acm和相关服务来解耦，或者参照配置文件获取
+- 业务数据应该进入s3或者数据库
+- 中间数据，应该送往消息队列进行解耦处理
+- 所有脚本和配置应该代码库统一管理，部署应该按照cicd管理
+- 将服务器无状态化
